JFrame has incorrect insets with metal pipeline enabled

XMLWordPrintable

    • 2d
    • os_x

      Current implementation of metal pipleline uses shifted top inset to adjust rendering. It causes some incorrect behaviour in mouse events handling

      java -Dsun.java2d.metal=true Main
      metalEnabled=1
      java.awt.Insets[top=0,left=0,bottom=-22,right=0]

      java -Dsun.java2d.metal=false Main
      metalEnabled=0
      java.awt.Insets[top=22,left=0,bottom=0,right=0]

            Assignee:
            Alexey Ushakov
            Reporter:
            Alexey Ushakov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: