8230810: JFrame has incorrect insets with metal pipeline enabled

Adjusted metal rendering to use correct insets in JFrame