src/java.desktop/macosx/native/libawt_lwawt/java2d/metal/MTLLayer.h
@@ -41,6 +41,8 @@
     float bufferWidth;
     float bufferHeight;
     id<MTLTexture> buffer;
+    int topInset;
+    int leftInset;
 }
 
 @property (nonatomic, retain) JNFWeakJObjectWrapper *javaLayer;
@@ -48,6 +50,8 @@
 @property (readwrite, assign) float bufferWidth;
 @property (readwrite, assign) float bufferHeight;
 @property (readwrite, assign) id<MTLTexture> buffer;
+@property (readwrite, assign) int topInset;
+@property (readwrite, assign) int leftInset;
 
 - (id) initWithJavaLayer:(JNFWeakJObjectWrapper *)layer;
 
